# mlflow_artifactory

./: LICENCE  README.md  pyproject.toml  setup.py
mlflowartifactoryplugin/store/artifact/: jfrog_artifactory.py
tests/: test_mlflow_artifactory.py
